# aon-import

./: .gitignore  AGENTS.md  Makefile  Pipfile  README.md  TODO.md  config.example.yaml  pyproject.toml
aon_import/: __init__.py  __main__.py  cli.py  config.py  contracts.py  discover.py  fetch.py  html_utils.py  models.py  parse.py  registry.py  render.py  resolver.py  scraper.py
aon_import/endpoints/: __init__.py
aon_import/endpoints/creature/: __init__.py  models.py  parser.py  renderer.py
aon_import/handlers/: __init__.py  generic.py
tests/: test_creature_parser.py  test_creature_renderer.py  test_registry.py
